# NVVA

./: CMakeLists.txt  README.md  main.cpp
src/: decode.cpp  decode.h  encode.h
